fixed header styles path, changed .wrap styles to new styles file called '_app.styles.scss'. Also fixed note editor path

--- a/src/Scripts/Notepp.styles.scss
+++ b/src/Scripts/Notepp.styles.scss
@@ -1,5 +1,5 @@
 // HOME STYLES
-@import './Components/home-components/header/_header.styles.scss';
+@import './Components/reusable-components/header/_header.styles.scss';
 @import './Components/home-components/_home.styles.scss';
 
 // LOADING STYLES
@@ -12,8 +12,9 @@
 @import './Components/not-found-component/_notFound.styles.scss';
 
 // APP STYLES
+@import './Components/app-components/_app.styles.scss';
 @import './Components/app-components/sidebar/_sidebar.styles.scss';
-@import './Components/app-components/note/_note.styles.scss';
+@import './Components/app-components/noteEditor/_noteEditor.styles.scss';
 @import './Components/app-components/notes/_notes.styles.scss';
 
 // LIBRARY STYLES
@@ -33,11 +34,4 @@ body {
   padding: 0;
   background-color: $bg-primary;
   font-family: Gill Sans MT;
-}
-
-.Wrap {
-  height: 100vh;
-  margin-left: 5rem;
-  display: flex;
-  flex-direction: row;
 }
